--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>Sidebar Menu</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="styles.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   </head>
   <body>
@@ -13,7 +13,7 @@
         <div class="menu-toggle"></div>
         <ul class="list">
           <li class="list-item active" style="--color:#f44336"><a href="#"> 
-            <span calss="icon">
+            <span class="icon">
               <ion-icon name="home-outline"></ion-icon>
             </span>
             <span class="text">Home</span>
@@ -24,7 +24,7 @@
             </span>
             <span class="text">About</span>
             </a></li>
-          <li calss="list-item" style="--color:#0fc70f"><a href="#">
+          <li class="list-item" style="--color:#0fc70f"><a href="#">
             <span class="icon">
               <ion-icon name="call-outline"></ion-icon>
             </span>  
@@ -40,7 +40,7 @@
             <span class="icon">
               <ion-icon name="pencil-outline"></ion-icon>
             </span>  
-            <span calss="text">Blog</span>
+            <span class="text">Blog</span>
             </a></li>
         </ul>
       </div>  
